# AptWeaver

./: .gitignore  README.md
contracts/: Move.toml
contracts/sources/: mpc.move
mpc/: Cargo.toml
mpc/src/: lib.rs
node/: Cargo.toml
node/src/: aptos_client.rs  lib.rs  main.rs  node.rs
two-party-ecdsa/src/: party_one.rs  test.rs
ui/: .env  package-lock.json  package.json  pnpm-lock.yaml  sample.env  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/exchange/: page.tsx
ui/components/: auto-connect-provider.tsx  navbar.tsx  wallet-provider.tsx  wallet-selector.tsx
ui/components/dashboard/: account-details.tsx  accounts.tsx  dashboard-store.ts  index.tsx
ui/components/dashboard/portfolio/: index.tsx
ui/components/dashboard/portfolio/commons/: copy-address.tsx  index.tsx  pnl-percentage.tsx  table-loading-skeleton.tsx
ui/components/dashboard/portfolio/overview/: asset-chart.tsx  index.tsx  loading-skeletons.tsx  portfolio-overview.tsx
ui/components/dashboard/portfolio/tokens/: index.tsx  token-columns.tsx
ui/components/dashboard/portfolio/transactions/: index.tsx
ui/components/dashboard/portfolio/transactions/transaction/: index.tsx  txn-metadata.tsx  txn-overview.tsx
ui/components/exchange/: connect-wallet.tsx  index.tsx  settings.tsx  transaction-history.tsx
ui/components/exchange/swap-user-data/: from-address.tsx  index.tsx  swap-icon.tsx  to-address.tsx
ui/components/exchange/token-box/: index.tsx  metadata.tsx  token-input.tsx  token-selector.tsx
ui/components/ui/: button.tsx  data-table.tsx  dialog.tsx  tabs.tsx
ui/hooks/: use-debounce.ts
ui/lib/: chain-data.ts  derivation.ts  types.ts  ui-icon-mappings.ts  utils.ts
ui/stores/: portfolio-store.ts  swap-store.ts
