[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
cait-sith = { version = "0.8.0", features = ["k256"] }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
