[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
two-party-ecdsa = {path="../two-party-ecdsa"}
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
url = "2.5.2"
once_cell = "1.20.2"
queues = "1.1.0"
 
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
